// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hero Snapshot matches snapshot 1`] = `
<div
  class="relative min-h-[80vh] flex items-center justify-center overflow-hidden pt-16"
>
  <div
    class="absolute inset-0 bg-gradient-to-b from-pink-50 via-white to-purple-50"
  >
    <div
      class="absolute inset-0 pointer-events-none"
    >
      <div
        class="absolute rounded-full blur-xl particle-float"
        style="left: 76.58810452630449%; top: 3.456655366594674%; width: 58.47684625951033px; height: 58.47684625951033px; background: rgba(147, 51, 234, 0.3); animation-delay: 0s;"
      />
      <div
        class="absolute rounded-full blur-xl particle-float"
        style="left: 51.49303079324932%; top: 76.54449622543373%; width: 43.97666769629365px; height: 43.97666769629365px; background: rgba(147, 51, 234, 0.3); animation-delay: 0.5s;"
      />
      <div
        class="absolute rounded-full blur-xl particle-float"
        style="left: 94.57392322830938%; top: 7.095373388135995%; width: 26.431872268738356px; height: 26.431872268738356px; background: rgba(219, 39, 119, 0.4); animation-delay: 1s;"
      />
      <div
        class="absolute rounded-full blur-xl particle-float"
        style="left: 33.48900767217968%; top: 23.097622238106386%; width: 19.954234129427817px; height: 19.954234129427817px; background: rgba(79, 70, 229, 0.3); animation-delay: 1.5s;"
      />
      <div
        class="absolute rounded-full blur-xl particle-float"
        style="left: 50.68612112438051%; top: 71.01170447691369%; width: 53.02984421043268px; height: 53.02984421043268px; background: rgba(126, 34, 206, 0.4); animation-delay: 2s;"
      />
      <div
        class="absolute rounded-full blur-xl particle-float"
        style="left: 23.345349012331983%; top: 7.954896641342124%; width: 33.50163664185023px; height: 33.50163664185023px; background: rgba(219, 39, 119, 0.4); animation-delay: 2.5s;"
      />
      <div
        class="absolute rounded-full blur-xl particle-float"
        style="left: 82.81155621000727%; top: 27.571724844624423%; width: 55.03723653010362px; height: 55.03723653010362px; background: rgba(99, 102, 241, 0.4); animation-delay: 3s;"
      />
    </div>
  </div>
  <div
    class="absolute left-[15%] top-[20%] w-24 h-24 md:w-36 md:h-36 rounded-full bg-gradient-to-r from-pink-300 to-pink-400 opacity-20 blur-2xl"
  />
  <div
    class="absolute right-[20%] bottom-[30%] w-32 h-32 md:w-48 md:h-48 rounded-full bg-gradient-to-r from-purple-400 to-pink-500 opacity-15 blur-3xl"
  />
  <div
    class="absolute left-[25%] bottom-[15%] w-20 h-20 md:w-32 md:h-32 rounded-full bg-gradient-to-r from-indigo-400 to-indigo-600 opacity-20 blur-2xl"
  />
  <div
    class="max-w-screen-xl mx-auto px-8 md:px-12 lg:px-16 py-16 md:py-20 relative z-10"
  >
    <div
      class="text-center max-w-4xl mx-auto"
    >
      <h1
        animate="[object Object]"
        class="text-4xl md:text-5xl lg:text-6xl font-extrabold text-gray-900 mb-6 tracking-tight"
        initial="[object Object]"
        transition="[object Object]"
      >
        Discover AI Design
        <br />
        <span
          class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500"
        >
          Inspiration & Patterns
        </span>
      </h1>
      <p
        animate="[object Object]"
        class="text-xl md:text-2xl text-gray-600 mb-10 max-w-2xl mx-auto"
        initial="[object Object]"
        transition="[object Object]"
      >
        Explore real-world examples of effective AI interfaces and learn from the best implementations
      </p>
      <div
        animate="[object Object]"
        class="mb-10 max-w-2xl mx-auto"
        initial="[object Object]"
        transition="[object Object]"
      >
        <div
          class="relative w-full"
        >
          <div
            class="relative"
          >
            <input
              class="w-full px-4 py-3 pl-12 pr-12 text-gray-700 bg-white border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent shadow-sm transition-all duration-200"
              placeholder="Search patterns, categories, or use cases..."
              type="text"
              value=""
            />
            <div
              class="absolute inset-y-0 left-0 flex items-center pl-4 pointer-events-none"
            >
              <svg
                class="w-5 h-5 text-gray-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        animate="[object Object]"
        class="flex justify-center"
        initial="[object Object]"
        transition="[object Object]"
      >
        <button
          class="relative inline-flex items-center justify-center rounded-full font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 cursor-pointer bg-gradient-to-r from-indigo-500 to-purple-600 text-white hover:from-indigo-600 hover:to-purple-700 focus:ring-indigo-500 px-6 py-3 text-base  text-base px-8 py-4"
        >
          Browse All Patterns
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Hero Snapshot matches snapshot with different props 1`] = `
<div
  class="relative min-h-[80vh] flex items-center justify-center overflow-hidden pt-16"
>
  <div
    class="absolute inset-0 bg-gradient-to-b from-pink-50 via-white to-purple-50"
  >
    <div
      class="absolute inset-0 pointer-events-none"
    >
      <div
        class="absolute rounded-full blur-xl particle-float"
        style="left: 8.851218119505644%; top: 1.4133584123422471%; width: 49.219575328304366px; height: 49.219575328304366px; background: rgba(99, 102, 241, 0.4); animation-delay: 0s;"
      />
      <div
        class="absolute rounded-full blur-xl particle-float"
        style="left: 7.606540609552148%; top: 56.177921260232154%; width: 27.294602192661102px; height: 27.294602192661102px; background: rgba(219, 39, 119, 0.4); animation-delay: 0.5s;"
      />
      <div
        class="absolute rounded-full blur-xl particle-float"
        style="left: 73.37389490957777%; top: 73.6317701590853%; width: 18.51292204907098px; height: 18.51292204907098px; background: rgba(99, 102, 241, 0.4); animation-delay: 1s;"
      />
      <div
        class="absolute rounded-full blur-xl particle-float"
        style="left: 50.57865047153338%; top: 66.62102012701598%; width: 55.490919126151866px; height: 55.490919126151866px; background: rgba(126, 34, 206, 0.4); animation-delay: 1.5s;"
      />
      <div
        class="absolute rounded-full blur-xl particle-float"
        style="left: 79.86658078986734%; top: 33.51691810125202%; width: 28.19935302691683px; height: 28.19935302691683px; background: rgba(99, 102, 241, 0.4); animation-delay: 2s;"
      />
      <div
        class="absolute rounded-full blur-xl particle-float"
        style="left: 35.99852348014363%; top: 44.03445910825239%; width: 32.04353428109111px; height: 32.04353428109111px; background: rgba(79, 70, 229, 0.3); animation-delay: 2.5s;"
      />
      <div
        class="absolute rounded-full blur-xl particle-float"
        style="left: 38.233873035640855%; top: 34.1598941362611%; width: 20.316950135284152px; height: 20.316950135284152px; background: rgba(79, 70, 229, 0.3); animation-delay: 3s;"
      />
    </div>
  </div>
  <div
    class="absolute left-[15%] top-[20%] w-24 h-24 md:w-36 md:h-36 rounded-full bg-gradient-to-r from-pink-300 to-pink-400 opacity-20 blur-2xl"
  />
  <div
    class="absolute right-[20%] bottom-[30%] w-32 h-32 md:w-48 md:h-48 rounded-full bg-gradient-to-r from-purple-400 to-pink-500 opacity-15 blur-3xl"
  />
  <div
    class="absolute left-[25%] bottom-[15%] w-20 h-20 md:w-32 md:h-32 rounded-full bg-gradient-to-r from-indigo-400 to-indigo-600 opacity-20 blur-2xl"
  />
  <div
    class="max-w-screen-xl mx-auto px-8 md:px-12 lg:px-16 py-16 md:py-20 relative z-10"
  >
    <div
      class="text-center max-w-4xl mx-auto"
    >
      <h1
        animate="[object Object]"
        class="text-4xl md:text-5xl lg:text-6xl font-extrabold text-gray-900 mb-6 tracking-tight"
        initial="[object Object]"
        transition="[object Object]"
      >
        Discover AI Design
        <br />
        <span
          class="bg-clip-text text-transparent bg-gradient-to-r from-pink-500 to-violet-500"
        >
          Inspiration & Patterns
        </span>
      </h1>
      <p
        animate="[object Object]"
        class="text-xl md:text-2xl text-gray-600 mb-10 max-w-2xl mx-auto"
        initial="[object Object]"
        transition="[object Object]"
      >
        Explore real-world examples of effective AI interfaces and learn from the best implementations
      </p>
      <div
        animate="[object Object]"
        class="mb-10 max-w-2xl mx-auto"
        initial="[object Object]"
        transition="[object Object]"
      >
        <div
          class="relative w-full"
        >
          <div
            class="relative"
          >
            <input
              class="w-full px-4 py-3 pl-12 pr-12 text-gray-700 bg-white border border-gray-300 rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent shadow-sm transition-all duration-200"
              placeholder="Search patterns, categories, or use cases..."
              type="text"
              value=""
            />
            <div
              class="absolute inset-y-0 left-0 flex items-center pl-4 pointer-events-none"
            >
              <svg
                class="w-5 h-5 text-gray-400"
                fill="none"
                stroke="currentColor"
                viewBox="0 0 24 24"
              >
                <path
                  d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        animate="[object Object]"
        class="flex justify-center"
        initial="[object Object]"
        transition="[object Object]"
      >
        <button
          class="relative inline-flex items-center justify-center rounded-full font-medium focus:outline-none focus:ring-2 focus:ring-offset-2 cursor-pointer bg-gradient-to-r from-indigo-500 to-purple-600 text-white hover:from-indigo-600 hover:to-purple-700 focus:ring-indigo-500 px-6 py-3 text-base  text-base px-8 py-4"
        >
          Browse All Patterns
        </button>
      </div>
    </div>
  </div>
</div>
`;
